--- a/assets/css/icomoon.css
+++ b/assets/css/icomoon.css
@@ -1,22 +1,23 @@
 @font-face {
-  font-family: 'icomoon';
-  src: url('../fonts/icomoon/icomoon46a0.eot?wilzzo');
-  src: url('../fonts/icomoon/icomoon46a0.eot?wilzzo#iefix') format('embedded-opentype'),
-  url('../fonts/icomoon/icomoon46a0.ttf?wilzzo') format('truetype'),
-  url('../fonts/icomoon/icomoon46a0.woff?wilzzo') format('woff'),
-  url('../fonts/icomoon/icomoon46a0.svg?wilzzo#icomoon') format('svg');
+  font-family: "icomoon";
+  src: url("../fonts/icomoon/icomoon46a0.eot?wilzzo");
+  src: url("../fonts/icomoon/icomoon46a0.eot?wilzzo#iefix")
+      format("embedded-opentype"),
+    url("../fonts/icomoon/icomoon46a0.ttf?wilzzo") format("truetype"),
+    url("../fonts/icomoon/icomoon46a0.woff?wilzzo") format("woff"),
+    url("../fonts/icomoon/icomoon46a0.svg?wilzzo#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
-  speak: none;
+[class^="icon-"],
+[class*=" icon-"] {
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
-  font-family: 'icomoon' !important;
+  font-family: "icomoon" !important;
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
