--- a/demo_assets/css/style.css
+++ b/demo_assets/css/style.css
@@ -18,31 +18,36 @@ Developer:		:  Rakibul Islam Dewan
 ==================================================================================================== */
 @font-face {
   font-family: "Sofia Pro Extra Light";
-  src: url("../fonts/sofia_pro/SofiaProExtraLight.woff2") format("woff2"), url("../fonts/sofia_pro/SofiaProExtraLight.woff") format("woff");
+  src: url("../fonts/sofia_pro/SofiaProExtraLight.woff2") format("woff2"),
+    url("../fonts/sofia_pro/SofiaProExtraLight.woff") format("woff");
   font-weight: 200;
   font-style: normal;
 }
 @font-face {
   font-family: "Sofia Pro Light";
-  src: url("../fonts/sofia_pro/SofiaProLight.woff2") format("woff2"), url("../fonts/sofia_pro/SofiaProLight.woff") format("woff");
+  src: url("../fonts/sofia_pro/SofiaProLight.woff2") format("woff2"),
+    url("../fonts/sofia_pro/SofiaProLight.woff") format("woff");
   font-weight: 300;
   font-style: normal;
 }
 @font-face {
   font-family: "Sofia Pro Medium";
-  src: url("../fonts/sofia_pro/SofiaProMedium.woff2") format("woff2"), url("../fonts/sofia_pro/SofiaProMedium.woff") format("woff");
+  src: url("../fonts/sofia_pro/SofiaProMedium.woff2") format("woff2"),
+    url("../fonts/sofia_pro/SofiaProMedium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
   font-family: "Sofia Pro SemiBold";
-  src: url("../fonts/sofia_pro/SofiaProSemiBold.woff2") format("woff2"), url("../fonts/sofia_pro/SofiaProSemiBold.woff") format("woff");
+  src: url("../fonts/sofia_pro/SofiaProSemiBold.woff2") format("woff2"),
+    url("../fonts/sofia_pro/SofiaProSemiBold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
 }
 @font-face {
   font-family: "Sofia Pro Bold";
-  src: url("../fonts/sofia_pro/SofiaProBold.woff2") format("woff2"), url("../fonts/sofia_pro/SofiaProBold.woff") format("woff");
+  src: url("../fonts/sofia_pro/SofiaProBold.woff2") format("woff2"),
+    url("../fonts/sofia_pro/SofiaProBold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
 }
@@ -50,7 +55,16 @@ Developer:		:  Rakibul Islam Dewan
   font-family: "Sofia Pro";
   src: url("http://db.onlinewebfonts.com/t/9e00143409affcb46a1ae58634aa64be.eot");
   /* IE9*/
-  src: url("http://db.onlinewebfonts.com/t/9e00143409affcb46a1ae58634aa64be.eot?#iefix") format("embedded-opentype"), url("http://db.onlinewebfonts.com/t/9e00143409affcb46a1ae58634aa64be.woff2") format("woff2"), url("http://db.onlinewebfonts.com/t/9e00143409affcb46a1ae58634aa64be.woff") format("woff"), url("http://db.onlinewebfonts.com/t/9e00143409affcb46a1ae58634aa64be.ttf") format("truetype"), url("../../../../../../db.onlinewebfonts.com/t/9e00143409affcb46a1ae58634aa64be.svg#Sofia Pro") format("svg");
+  src: url("http://db.onlinewebfonts.com/t/9e00143409affcb46a1ae58634aa64be.eot?#iefix")
+      format("embedded-opentype"),
+    url("http://db.onlinewebfonts.com/t/9e00143409affcb46a1ae58634aa64be.woff2")
+      format("woff2"),
+    url("http://db.onlinewebfonts.com/t/9e00143409affcb46a1ae58634aa64be.woff")
+      format("woff"),
+    url("http://db.onlinewebfonts.com/t/9e00143409affcb46a1ae58634aa64be.ttf")
+      format("truetype"),
+    url("../../../../../../db.onlinewebfonts.com/t/9e00143409affcb46a1ae58634aa64be.svg#Sofia Pro")
+      format("svg");
   /* iOS 4.1- */
 }
 /* 01 - fonts - end
@@ -127,18 +141,32 @@ img {
   background-position: center center;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 700;
   line-height: 1.1;
   color: #051441;
   font-family: "Sofia Pro Bold", sans-serif;
 }
 
-.text-white h1, .text-white h2, .text-white h3, .text-white h4, .text-white h5, .text-white h6 {
+.text-white h1,
+.text-white h2,
+.text-white h3,
+.text-white h4,
+.text-white h5,
+.text-white h6 {
   color: #ffffff;
 }
 
-strong, span, small, label, i {
+strong,
+span,
+small,
+label,
+i {
   font-family: "Sofia Pro";
 }
 
@@ -180,13 +208,13 @@ strong, span, small, label, i {
   right: 0px;
   bottom: 0px;
   z-index: 1;
-  color: #858DA3;
+  color: #858da3;
   font-size: 18px;
   line-height: 50px;
   text-align: center;
   position: absolute;
   border-radius: 100%;
-  border: 1px solid #858DA3;
+  border: 1px solid #858da3;
   transition: 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
   font-family: "Font Awesome 5 Pro";
 }
@@ -527,31 +555,52 @@ strong, span, small, label, i {
   animation: letters-loading 4s infinite;
 }
 
-.ctn-preloader .animation-preloader .txt-loading .letters-loading:nth-child(2):before {
+.ctn-preloader
+  .animation-preloader
+  .txt-loading
+  .letters-loading:nth-child(2):before {
   animation-delay: 0.2s;
 }
 
-.ctn-preloader .animation-preloader .txt-loading .letters-loading:nth-child(3):before {
+.ctn-preloader
+  .animation-preloader
+  .txt-loading
+  .letters-loading:nth-child(3):before {
   animation-delay: 0.4s;
 }
 
-.ctn-preloader .animation-preloader .txt-loading .letters-loading:nth-child(4):before {
+.ctn-preloader
+  .animation-preloader
+  .txt-loading
+  .letters-loading:nth-child(4):before {
   animation-delay: 0.6s;
 }
 
-.ctn-preloader .animation-preloader .txt-loading .letters-loading:nth-child(5):before {
+.ctn-preloader
+  .animation-preloader
+  .txt-loading
+  .letters-loading:nth-child(5):before {
   animation-delay: 0.8s;
 }
 
-.ctn-preloader .animation-preloader .txt-loading .letters-loading:nth-child(6):before {
+.ctn-preloader
+  .animation-preloader
+  .txt-loading
+  .letters-loading:nth-child(6):before {
   animation-delay: 1s;
 }
 
-.ctn-preloader .animation-preloader .txt-loading .letters-loading:nth-child(7):before {
+.ctn-preloader
+  .animation-preloader
+  .txt-loading
+  .letters-loading:nth-child(7):before {
   animation-delay: 1.2s;
 }
 
-.ctn-preloader .animation-preloader .txt-loading .letters-loading:nth-child(8):before {
+.ctn-preloader
+  .animation-preloader
+  .txt-loading
+  .letters-loading:nth-child(8):before {
   animation-delay: 1.4s;
 }
 
@@ -609,11 +658,14 @@ strong, span, small, label, i {
   }
 }
 @keyframes letters-loading {
-  0%, 75%, 100% {
+  0%,
+  75%,
+  100% {
     opacity: 0;
     transform: rotateY(-90deg);
   }
-  25%, 50% {
+  25%,
+  50% {
     opacity: 1;
     transform: rotateY(0deg);
   }
@@ -750,17 +802,24 @@ button {
   color: #051441;
   text-transform: capitalize;
 }
-.sidebar-menu-wrapper .mobile_menu .menu_list > ul li:hover, .sidebar-menu-wrapper .mobile_menu .menu_list > ul li.active {
+.sidebar-menu-wrapper .mobile_menu .menu_list > ul li:hover,
+.sidebar-menu-wrapper .mobile_menu .menu_list > ul li.active {
   background-color: rgba(65, 84, 241, 0.02);
 }
-.sidebar-menu-wrapper .mobile_menu .menu_list > ul li:hover > a, .sidebar-menu-wrapper .mobile_menu .menu_list > ul li.active > a {
+.sidebar-menu-wrapper .mobile_menu .menu_list > ul li:hover > a,
+.sidebar-menu-wrapper .mobile_menu .menu_list > ul li.active > a {
   color: #4154f1;
   background-color: rgba(65, 84, 241, 0.03);
 }
 .sidebar-menu-wrapper .mobile_menu .menu_list > ul li.menu_item_has_child > a {
   position: relative;
 }
-.sidebar-menu-wrapper .mobile_menu .menu_list > ul li.menu_item_has_child > a:after {
+.sidebar-menu-wrapper
+  .mobile_menu
+  .menu_list
+  > ul
+  li.menu_item_has_child
+  > a:after {
   top: 60%;
   right: 40px;
   line-height: 1;
@@ -771,15 +830,33 @@ button {
   transform: translateY(-60%);
   font-family: "Font Awesome 5 Pro";
 }
-.sidebar-menu-wrapper .mobile_menu .menu_list > ul li.menu_item_has_child .submenu {
+.sidebar-menu-wrapper
+  .mobile_menu
+  .menu_list
+  > ul
+  li.menu_item_has_child
+  .submenu {
   margin: 0px -40px;
   background-color: rgba(65, 84, 241, 0.02);
 }
-.sidebar-menu-wrapper .mobile_menu .menu_list > ul li.menu_item_has_child .submenu > li {
+.sidebar-menu-wrapper
+  .mobile_menu
+  .menu_list
+  > ul
+  li.menu_item_has_child
+  .submenu
+  > li {
   width: 100%;
   display: block;
 }
-.sidebar-menu-wrapper .mobile_menu .menu_list > ul li.menu_item_has_child .submenu > li > a {
+.sidebar-menu-wrapper
+  .mobile_menu
+  .menu_list
+  > ul
+  li.menu_item_has_child
+  .submenu
+  > li
+  > a {
   font-size: 14px;
   padding: 10px 40px;
   padding-left: 60px;
@@ -825,7 +902,12 @@ button {
   position: relative;
 }
 .banner_section.bg_gradient_blue {
-  background-image: linear-gradient(45deg, #3b31ed 0%, #4773f4 52%, #52b4fb 100%);
+  background-image: linear-gradient(
+    45deg,
+    #3b31ed 0%,
+    #4773f4 52%,
+    #52b4fb 100%
+  );
 }
 .banner_section .deco_wrap {
   top: 0px;
@@ -1013,7 +1095,12 @@ button {
   position: absolute;
 }
 .element_section .small_bg.bg_gradient_blue {
-  background-image: linear-gradient(45deg, #52b4fb 0%, #4773f4 48%, #3b31ed 100%);
+  background-image: linear-gradient(
+    45deg,
+    #52b4fb 0%,
+    #4773f4 48%,
+    #3b31ed 100%
+  );
 }
 .element_section .grid {
   margin: -10px;
@@ -1102,7 +1189,12 @@ button {
 /* portfolio section - start
 ================================================== */
 .portfolio_section.bg_gradient_blue {
-  background-image: linear-gradient(-45deg, #3b31ed 0%, #4773f4 52%, #52b4fb 100%);
+  background-image: linear-gradient(
+    -45deg,
+    #3b31ed 0%,
+    #4773f4 52%,
+    #52b4fb 100%
+  );
 }
 
 .portfolio_carousel {
@@ -1243,7 +1335,12 @@ button {
 }
 .innerpages_section .small_bg.bg_gradient_blue {
   height: 393px;
-  background-image: linear-gradient(45deg, #3b31ed 0%, #4773f4 52%, #52b4fb 100%);
+  background-image: linear-gradient(
+    45deg,
+    #3b31ed 0%,
+    #4773f4 52%,
+    #52b4fb 100%
+  );
 }
 
 /* footer element section - end
@@ -1295,7 +1392,12 @@ button {
   margin-bottom: 35px;
   border-radius: 20px;
   display: inline-block;
-  background-image: linear-gradient(to bottom right, #3b31ed 0%, #4773f4 52%, #52b4fb 100%);
+  background-image: linear-gradient(
+    to bottom right,
+    #3b31ed 0%,
+    #4773f4 52%,
+    #52b4fb 100%
+  );
 }
 .features_primary .item_icon svg {
   fill: #ffffff;
@@ -1527,7 +1629,7 @@ button {
   }
 
   .element_section .grid .grid-item,
-.element_section .grid .grid-sizer {
+  .element_section .grid .grid-sizer {
     width: 33.333%;
   }
 
@@ -1627,7 +1729,7 @@ button {
   }
 
   .element_section .grid .grid-item,
-.element_section .grid .grid-sizer {
+  .element_section .grid .grid-sizer {
     width: 50%;
   }
 
@@ -1747,7 +1849,7 @@ button {
   }
 
   .element_section .grid .grid-item,
-.element_section .grid .grid-sizer {
+  .element_section .grid .grid-sizer {
     width: 100%;
   }
 
