--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20794,3 +20794,13 @@ button {
   cursor: pointer;
   font-size: 18px;
 }
+
+
+#particles-js {
+  background-image: linear-gradient(
+    45deg,
+    #5991da 0%,
+    #5a5acc 52%,
+    #5d6de7 100%
+  );
+}
