--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20800,3 +20800,22 @@ button {
     #5d6de7 100%
   );
 }
+
+svg text {
+  stroke: #ffffff;
+  font-size: 150px;
+  font-weight: 500;
+  stroke-width: 3;
+  animation: textAnimate 5s infinite alternate;
+}
+
+@keyframes textAnimate {
+  0% {
+    stroke-dasharray: 0 50%;
+    stroke-dashoffset: -20%;
+  }
+  100% {
+    stroke-dasharray: 50% 0;
+    stroke-dashoffset: -20%;
+  }
+}
